# adya_mcp_hackathon_hb

./: .gitignore  QUICKBOOKS_DEBUG_SUMMARY.md  pyproject.toml
mcp_datarobot/: __main__.py
mcp_servers/python/clients/: run.py
mcp_servers/python/clients/src/: client_and_server_config.py  client_and_server_execution.py  client_and_server_validation.py  server_connection.py
mcp_servers/python/servers/CUSTOM/mcp-custom/: pyproject.toml
mcp_servers/python/servers/CUSTOM/mcp-custom/mcp_custom/: .env  __init__.py  __main__.py
mcp_servers/python/servers/DART/: .gitignore  README.md  __init__.py  pyproject.toml
mcp_servers/python/servers/DART/mcp_dart/: __init__.py  __main__.py
mcp_servers/python/servers/DART/mcp_dart.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp_servers/python/servers/DATAROBOT/: .gitignore  README.md  __init__.py  datarobot_mcp.py  housing.csv  pyproject.toml
mcp_servers/python/servers/DATAROBOT/mcp-datarobot/: README.md  pyproject.toml
mcp_servers/python/servers/DATAROBOT/mcp-datarobot/mcp_datarobot/: .env  __init__.py  __main__.py
mcp_servers/python/servers/DATAROBOT/mcp_datarobot/: __init__.py  __main__.py  predict.csv
mcp_servers/python/servers/DOCKERHUB/mcp-dockerhub/: README.md  __init__.py  pyproject.toml
mcp_servers/python/servers/DOCKERHUB/mcp-dockerhub/mcp_dockerhub/: __init__.py  __main__.py
mcp_servers/python/servers/MCP-GSUITE/mcp-gsuite/src/mcp_gsuite/: server.py
mcp_servers/python/servers/NOTION/mcp-notion/: README.md  __init__.py  pyproject.toml
mcp_servers/python/servers/NOTION/mcp-notion/mcp_notion/: __init__.py  __main__.py
mcp_servers/python/servers/QUICKBOOKS/: .gitignore  README.md  __init__.py  oauth_get_tokens.py  pyproject.toml  tools.py
mcp_servers/python/servers/QUICKBOOKS/mcp_quickbooks/: __init__.py  __main__.py
mcp_servers/python/servers/QUICKBOOKS_ONLINE_MCP/: client_and_server.py  oauth_get_tokens.py  requirements.txt  server.py  tools.py
mcp_servers_documentation/DART/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/DATAROBOT/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/DOCKERHUB/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/NOTION/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/OTHER_MCP_SERVERS/: quickbooks_credentials.md
mcp_servers_documentation/QUICKBOOKS/: credentials.md  demo_videos.md  server_features.md
postman_api_collections/: dart_request.json  datarobot_request.json  dockerhub_request.json  notion_request.json  quickbooks_request.json
